# MCP-Test

./: .gitignore  README.md
Python/calculator-py/: README.md  readme.txt
Typescript/todo-ts/: README.md
Typescript/todo-ts/src/: index.ts
stdio/: README.md
stdio/Typescript/todo-ts/: package-lock.json
streamable/: README.md
streamable/docs/: claude-desktop.md  mcp-concepts.md  streamable-http.md  troubleshooting.md
streamable/python-mcp-streamable-http/: .env.example  README.md  pyproject.toml
streamable/python-mcp-streamable-http/src/: __init__.py  client.py  server.py  tools.py
streamable/python-mcp-streamable-http/tests/: test_basic.py
streamable/typescript-mcp-streamable-http/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
streamable/typescript-mcp-streamable-http/src/: client.ts  server.ts  tools.ts
streamable/typescript-mcp-streamable-http/tests/: basic.test.ts
