[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-python-streamable-http"
version = "0.1.0"
description = "Demo MCP server and client using Streamable HTTP transport (Python)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MCP Streamable HTTP Demo" }]
dependencies = [
    # mcp 1.27+ ships FastMCP with the streamable-http transport and the
    # new streamable_http_client. Pin the lower bound so the imports used
    # in src/server.py and src/client.py are guaranteed to exist.
    "mcp>=1.27.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
demo-mcp-server = "src.server:main"
demo-mcp-client = "src.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
